Fixed sm secondary header not showing

--- a/client/src/components/Header/SecondaryHeader.css
+++ b/client/src/components/Header/SecondaryHeader.css
@@ -38,7 +38,7 @@
 }
 
 #small-screen-secondary-header {
-  display: none !important;
+  display: none;
 }
 
 .small-screen-secondary-header-items {
